# n8n-cli

./: .gitignore  README.md  SKILL.md  openapi.bundled.json  pyproject.toml
n8n_cli/: config.py  main.py  output.py
n8n_client/: __init__.py
n8n_client/api/audit/: post_audit.py
n8n_client/models/: __init__.py  active_version_type_0_connections.py  audit.py  audit_credentials_risk_report.py  audit_database_risk_report.py  audit_filesystem_risk_report.py  audit_instance_risk_report.py  audit_nodes_risk_report.py  community_package.py  community_package_installed_nodes_item.py  create_credential_body.py  create_credential_body_data.py  create_credential_response.py  create_credential_response_200.py  create_data_table_body.py  create_data_table_body_columns_item.py  create_data_table_body_columns_item_type.py  create_data_table_request.py  create_data_table_request_columns_item.py  create_data_table_request_columns_item_type.py  create_data_table_response_201.py  create_data_table_response_201_columns_item.py  create_data_table_response_201_columns_item_type.py  credential.py  credential_data.py  credential_list.py  credential_list_item.py  credential_shared_item.py  credential_type.py  data_table.py  data_table_columns_item.py  data_table_columns_item_type.py  data_table_list.py  data_table_row.py  data_table_row_list.py  delete_credential_response_200.py  delete_credential_response_200_data.py  delete_data_table_rows_response_200_type_1_item.py  delete_executions_id_response_200.py  delete_executions_id_response_200_custom_data.py  (+441 more)
tests/: test_cli.py  test_config.py
(+65 files in other folders)
